# chorez

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
chorez/: chorez.py  database.py  models.py  settings.py
chorez/models/: models.py
src/chorez/: chorez.py  database.py  models.py  settings.py
src/chorez/cli/: main.py  root.py  root_cli.py  task.py  time.py
tests/: test_database.py
typings/dataset/: __init__.pyi  chunked.pyi  database.pyi  table.pyi  types.pyi  util.pyi
