[project]
name = "chorez"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "dataset>=1.6.2",
  "pydantic-settings>=2.11.0",
  "sqlalchemy>=1.4.54",
  "typed-argument-parser>=1.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
